--- a/assest/style.css
+++ b/assest/style.css
@@ -14,20 +14,19 @@ margin: auto;
 height: 700px;
 box-shadow: rgb(75, 72, 72);
 }
-button{
+#generate{
 background-color: red;
-font-size: 45px;
+font-size: 47px;
 border-radius: 15px;
 margin: 30px 390px;
 }
-#password{
+#center{
 border: 1px solid black;
 border-style: dotted;
 height: 400px;
 width: 900px;
 margin: auto;
+text-align: center;
+    size: 20px;
 }
-p{
-margin: auto;
 
-}
